infrastructure/local/kubernetes/delivery-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service-deployment
  labels:
    app: delivery-service
spec:
  replicas: 1
  template:
    metadata:
      name: delivery-service
      labels:
        app: delivery-service
    spec:
      containers:
        - name: delivery-service
          image: 590183838260.dkr.ecr.us-east-1.amazonaws.com/africasuperapp-delivery-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8002
      imagePullSecrets:
        - name: registry-credentials
      restartPolicy: Always
  selector:
    matchLabels:
      app: delivery-service
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery-service
  ports:
    - protocol: "TCP"
      port: 8002
      targetPort: http
  type: ClusterIP
