infrastructure/local/kubernetes/package-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: package-service-deployment
  labels:
    app: package-service
spec:
  replicas: 1
  template:
    metadata:
      name: package-service
      labels:
        app: package-service
    spec:
      containers:
        - name: package-service
          image: 590183838260.dkr.ecr.us-east-1.amazonaws.com/africasuperapp-package-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8001
      imagePullSecrets:
        - name: registry-credentials
      restartPolicy: Always
  selector:
    matchLabels:
      app: package-service


---
apiVersion: v1
kind: Service
metadata:
  name: package-service
spec:
  selector:
    app: package-service
  ports:
    - protocol: "TCP"
      port: 8001
      targetPort: http
      nodePort: 30008
  type: LoadBalancer
