infrastructure/local/kubernetes/user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service
spec:
  replicas: 1
  template:
    metadata:
      name: user-service
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 590183838260.dkr.ecr.us-east-1.amazonaws.com/africasuperapp-user-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8003
      imagePullSecrets:
        - name: registry-credentials
      restartPolicy: Always
  selector:
    matchLabels:
      app: user-service

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: "TCP"
      port: 8003
      targetPort: http
  type: ClusterIP
