infrastructure/local/kubernetes/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: webapp
          image: 590183838260.dkr.ecr.us-east-1.amazonaws.com/africasuperapp-web:1.0
          ports:
            - name: http
              containerPort: 4200
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: registry-credentials
      restartPolicy: Always
  selector:
    matchLabels:
      app: web

---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - protocol: "TCP"
      port: 4200
      targetPort: http
  type: ClusterIP
